[package]
name = "info_keep_clap"
version = "0.3.1"
edition = "2018"
# TODO: Added Version command
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3"}
read_input = "0.8.4"
info_keep_lib = {path = "../info_keep_lib" }


