[package]
name = "info_keep_iced"
version = "0.2.0"
edition = "2018"

# Very bad implimentation
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.3" }
info_keep_lib = {git = "https://github.com/Rdna123/Info_Keep.git", tag = "v0.2.0"}
chrono = "0.4.19"

# Secuity Patch
[patch.crates-io]
chrono = { git = "https://github.com/timvisee/chrono", branch = "time-0.3" }
