[package]
name = "info_keep_lib"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.4"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
sled = { version = "0.34.6", features = ["compression"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
sled = "0.34.6"



