[package]
name = "info_keep_lib"
version = "0.4.0"
edition = "2021"
# TODO: Release v0.4.0
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.5"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
sled = { version = "0.34.7", features = ["compression"] }

#Support not added to library yet
#[target.'cfg(target_arch="wasm32")'.dependencies]
#sled = "0.34.6"
# TODO: Update Dependecies


